--- a/src/components/main/LatestProjects/LatestProjects.scss
+++ b/src/components/main/LatestProjects/LatestProjects.scss
@@ -1,4 +1,5 @@
 @use "../../../styles/variables" as v;
+@use "sass:color";
 
 .latest-projects {
   padding: v.$spacing-4xl 0;
@@ -294,7 +295,7 @@
     background: linear-gradient(
       135deg,
       v.$terracotta 0%,
-      darken(v.$terracotta, 10%) 50%,
+      color.adjust(v.$terracotta, $lightness: -10%) 50%,
       v.$terracotta 100%
     );
     transform: skew(-15deg) translateY(-3px) scale(1.05);
