Fix adaptive in the footer

--- a/src/styles/responsive/layout/_footer-responsive.scss
+++ b/src/styles/responsive/layout/_footer-responsive.scss
@@ -402,3 +402,10 @@
     }
   }
 }
+
+@media (max-width: v.$breakpoint-xs) {
+  .footer-navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+}
