Add adaptive to main block at the main page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -83,6 +83,9 @@ $spacing-3xl: 4rem; // 64px
 $spacing-4xl: 6rem; // 96px
 
 // Брейкпоінти
+$breakpoint-micro: 280px;
+$breakpoint-xxxs: 320px;
+$breakpoint-xxs: 360px;
 $breakpoint-xs: 480px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 992px;
