--- a/src/styles/responsive/layout/_header-responsive.scss
+++ b/src/styles/responsive/layout/_header-responsive.scss
@@ -247,7 +247,7 @@
 }
 
 // === ОЧЕНЬ МАЛЕНЬКИЕ ЭКРАНЫ ===
-@media (max-width: 360px) {
+@media (max-width: v.$breakpoint-xxs) {
   .header-content {
     height: 60px;
   }
